--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -8,6 +8,7 @@
   background-color: #d7dbd6;
   z-index: 100;
   position: relative;
+
 }
 .home::before{
     width: 100vw;
@@ -25,6 +26,7 @@
   max-width: 1366px;
   z-index: 100;
   display: flex;
+
 }
 
 .home-bg{
@@ -35,13 +37,18 @@
     display: flex;
     align-items: center;
     justify-content: center;
-}
-.home-bg > img {
-    width: 100px;
-    margin: auto;
-    border-radius: 100%;
+
 
 }
+
+.home-bg > img {
+    width: 250px;
+    margin: auto;
+    border-radius: 100%;
+    display: flex;
+}
+
+
 @media only screen and (min-width:1367px){
     .home-container{
         height: 95%;
