--- a/src/Components/Sidebar.css
+++ b/src/Components/Sidebar.css
@@ -34,7 +34,9 @@
   justify-content: space-evenly;
   width: 150px;
   color: #51585c;
+  cursor: pointer;
 }
+
 
 .sidebar-header-btn > .MuiSvgIcon-root {
   margin-right: 2vw;
